PDFBOX-5660: Sonar fix